--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "amfe-flexible": "^2.2.1",
     "axios": "^0.20.0",
+    "better-scroll": "^2.0.5",
     "core-js": "^3.6.5",
+    "dayjs": "^1.9.4",
     "vant": "^2.10.11",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
