--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "better-scroll": "^2.0.5",
     "core-js": "^3.6.5",
     "dayjs": "^1.9.4",
+    "lodash": "^4.17.20",
     "vant": "^2.10.11",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
