--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "better-scroll": "^2.0.5",
     "core-js": "^3.6.5",
+    "cropperjs": "^1.5.9",
     "dayjs": "^1.9.4",
     "json-bigint": "^1.0.0",
     "lodash": "^4.17.20",
